--- a/styles/main.css
+++ b/styles/main.css
@@ -4,22 +4,178 @@
   padding: 0;
 }
 
+.home {
+  min-height: 100vh;
+}
+
+/* ! About */
+.about {
+  min-height: 100vh;
+  display: flex;
+}
+
+.about:hover {
+  margin-left: 2.9rem;
+  transition: 1s;
+}
+
+.about-branding-picture {
+  display: flex;
+  align-items: flex-start;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.my-photo-positioning {
+  margin-top: 6rem;
+  margin-left: 6rem;
+  animation: open 8s ease-in-out;
+}
+
+.positioning-brand-statement-paragraph {
+  margin-left: -4rem;
+  margin-top: 5rem;
+  animation: open 5s ease-in-out;
+  z-index: 1;
+}
+
+.positioning-about-main-heading {
+  margin-top: 3rem;
+  animation: open 2s ease-in-out;
+}
+
+.projects-main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.skills-positioning-container {
+  width: 80%;
+  margin-top: 7rem;
+}
+
+.skills-icons {
+  width: 100%;
+  margin: 1rem;
+  transition: 2s;
+  display: block;
+}
+
+.skills-icons-positioning {
+  display: flex;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  animation: open 2s ease-in-out;
+}
+
+.overlay {
+  margin-top: 5rem;
+  margin-left: .5rem;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 50%;
+  width: 120%;
+  opacity: 0;
+  transition: .5s ease;
+}
+
+.container {
+  position: relative;
+  width: 75px;
+  margin: 1rem;
+}
+
+.container:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  margin-top: .5rem;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+/* ! Experiences & Education */
+.experiences {
+  min-height: 100vh;
+}
+
+.experiences-main-heading {
+  font-size: 8rem;
+  letter-spacing: .3rem;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: "didot";
+  transition: .4s;
+  opacity: .4;
+}
+
+.heading-two {
+  opacity: .1;
+  margin-top: 4.2rem;
+  text-align: right;
+  margin-right: 10rem;
+  /* margin-right: -36rem; */
+}
+
+.experiences-education-wannabe-table {
+  display: flex;
+  width: 80%;
+  height: 400px;
+  border: 1px solid red;
+  margin: 4rem auto;
+}
+
+.experiences-left-side {
+  width: 50%;
+  padding: 2rem;
+}
+
+.education-right-side {
+  width: 50%;
+  padding: 2rem;
+}
+
+.bullet-right {
+  padding-left: 1rem;
+}
+
 /* ! Projects section */
 .projects {
   min-height: 100vh;
   display: flex;
   align-items: center;
+  transition: 1s;
+}
+
+.projects:hover {
+  margin-left: 2.9rem;
+  transition: 1s;
 }
 
 .projects-main-heading {
-  font-size: 6rem;
+  font-size: 8rem;
   letter-spacing: .3rem;
   text-transform: uppercase;
   transform: rotate(180deg);
   writing-mode: vertical-lr;
   text-align: center;
-  line-height: .77;
+  line-height: .2;
   font-family: "didot";
+  transition: .4s;
+  opacity: .4;
+  animation: open 4s ease-in-out;
 }
 
 .changing-according-profile {
@@ -27,7 +183,7 @@
 }
 
 details[open] summary ~* {
-  animation: open .3s ease-in-out;
+  animation: open 1s ease-in-out;
 }
 
 @keyframes open {
@@ -52,6 +208,7 @@ details summary {
   font-size: 1.25rem;
   font-weight: 300;
   list-style: none;
+  animation: open 2s ease-in-out;
 }
 
 details summary::after {
@@ -81,8 +238,8 @@ details p {
 }
 
 .project-details-width {
-  width: 90%;
-  margin-left: 4rem;
+  width: 75%;
+  margin-left: 8rem;
   margin-right: 4rem;
 }
 
@@ -118,4 +275,22 @@ details p {
 
 .accordion-text-paragraph {
   font-size: 1.2rem;
+}
+
+/* ! Contacts */
+.contacts {
+  min-height: 75vh;
+  animation: open 4s ease-in-out;
+}
+
+/* ! Footer */
+.footer {
+  clear: both;
+  position: relative;
+  height: 4rem;
+  margin-top: -4rem;
+  background: red;
+  justify-content: center;
+  display: flex;
+  align-items: center;
 }
