Trying to sort some media query

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,10 @@
 @import 'home';
 @import 'about';
 @import 'projects';
+@import 'experiences';
 @import 'contacts';
 @import 'footer';
+@import 'media-query';
 
 * {
   box-sizing: border-box;
