--- a/src/styles/_experiences.scss
+++ b/src/styles/_experiences.scss
@@ -17,8 +17,7 @@
   opacity: .1;
   margin-top: 4.2rem;
   text-align: right;
-  margin-right: 10rem;
-  /* margin-right: -36rem; */
+  // margin-right: 10rem;
 }
 
 .experiences-education-wannabe-table {
