Some more styling

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -8,7 +8,7 @@
 .about:hover {
   margin-left: 2.9rem;
   transition: 1s;
-  cursor: pointer;
+  // cursor: pointer;
 }
 
 .about-branding-picture {
@@ -28,7 +28,7 @@
   margin-left: -4rem;
   margin-top: 5rem;
   animation: open 5s ease-in-out;
-  z-index: 1;
+  // z-index: 1;
 }
 
 .positioning-about-main-heading {
