--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -2,15 +2,59 @@
   background: antiquewhite;
 }
 
+.scrolls {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 1.25em;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: black;
+  opacity: .4;
+  display: block;
+  padding-top: 40px;
+  padding-bottom: 10px;
+  font-size: 8px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-right: .8rem;
+
+  .center {
+    font-size: 0.4rem;
+  }
+
+  .scroll-indicator-line {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    display: block;
+    width: 1px;
+    height: 25px;
+    background-color: #000;
+    margin: auto;
+    content: '';
+  }
+}
+
 .homepage-container {
   min-height: 100vh;
   font-family: "didot";
 }
 
 header {
-  margin: 2rem;
-  min-height: 93.2vh;
+  // margin: 2rem;
+  min-height: 100vh;
   position: relative;
+}
+
+.putting-margin-to-home-page {
+  padding: 2rem;
+  // margin-bottom: 4rem;
 }
 
 nav a {
@@ -23,9 +67,11 @@ nav a {
     display: inline-block;
 }
 
-nav:hover a {
+nav:hover a h2 {
   color: rgb(114, 0, 0);;
   cursor: url('../images/circleTwo.svg'), auto;
+  padding: 2rem;
+  margin: -2rem;
 }
 
 .cursor-outside-container {
@@ -39,6 +85,11 @@ nav:hover a {
   justify-content: space-between;
 }
 
+// .top-navbar:hover a h2 {
+//   color: rgb(114, 0, 0);;
+//   cursor: url('../images/circleTwo.svg'), auto;
+// }
+
 .bottom-navbar {
   position: absolute;
   bottom: 0;
@@ -46,6 +97,7 @@ nav:hover a {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  margin-bottom: 4rem;
 }
 
 .navbar-contacts-directions {
