--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -51,7 +51,7 @@ details summary {
   padding: .5rem 0;
   border-bottom: 1px solid black;
   position: relative;
-  cursor: pointer;
+  cursor: url('../images/circleTwo.svg'), auto;
   font-size: 1.25rem;
   font-weight: 300;
   list-style: none;
@@ -60,7 +60,7 @@ details summary {
 
 details summary::after {
   content: '+';
-  color: #d39700;
+  color: rgb(114, 0, 0);
   position: absolute;
   font-size: 1.75rem;
   line-height: 0;
@@ -98,10 +98,22 @@ details p {
 .summary-positioning {
   display: flex;
   align-items: center;
+  h3 {
+    font-size: 1.5rem;
+    font-family: didot;
+  }
 }
 
+.project-icon-container {
+  height: 75px;
+  width: 75px;
+}
 .project-icon {
   padding-right: 1rem;
+  // width: 75px;
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
 
 .accordion-text {
@@ -115,11 +127,12 @@ details p {
 }
 
 .tools-icons-size {
-  width: 25px;
-  height: 25px;
+  width: 40px;
+  height: 40px;
   margin-right: 10px;
 }
 
 .accordion-text-paragraph {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
+  font-family: 'Raleway', sans-serif;
 }
