ipad pro & ipad media query

--- a/src/styles/_experiences.scss
+++ b/src/styles/_experiences.scss
@@ -3,7 +3,7 @@
   min-height: 100vh;
 }
 
-.experiences-main-heading {
+.experiences-main-heading, .contact-main-heading {
   font-size: 8rem;
   letter-spacing: .3rem;
   text-transform: uppercase;
