--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -28,7 +28,7 @@
   margin-left: 28rem;
   margin-top: -14.5rem;
   animation: open 5s ease-in-out;
-  // z-index: 1;
+  z-index: 1;
 }
 
 .positioning-about-main-heading {
