--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -64,7 +64,7 @@ nav a {
     color: black;
     transition: 0.2s;
     position: relative;
-    display: inline-block;
+    // display: inline-block;
 }
 
 nav:hover a h2 {
@@ -108,6 +108,9 @@ nav:hover a h2 {
 .my-introduction-heading {
 
   margin-top: 18rem;
+  .tominc-media-query {
+    display: flex;
+  }
   h1 {
     text-transform: uppercase;
     font-size: 12rem;
