--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,5 +1,19 @@
 * {
   background: antiquewhite;
+  ul {
+    margin: 0;
+  }
+  ul.dashed {
+    list-style-type: none;
+    padding-left: 1rem;
+    }
+  ul.dashed > li {
+    text-indent: -5px;
+  }
+  ul.dashed > li:before {
+    content: "-";
+    text-indent: -5px;
+  }
 }
 
 .scrolls {
