--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -410,7 +410,7 @@
   }
 
   .putting-margin-to-home-page {
-    width: 130%;
+    width: 135%;
   }
 
   .my-introduction-heading {
@@ -427,6 +427,148 @@
 
   // ? About page
 
+  .about {
+    margin-top: 8rem;
+  }
+
+  .projects-main-heading {
+    font-size: 20rem;
+    margin-top: 10rem;
+    opacity: .1 !important;
+    z-index: 1;
+    margin-left: 5rem !important;
+    color: rgba(0, 0, 0, .5);
+  }
+
+  .about-container-media-query {
+    margin-left: -5rem;
+  }
+
+  .about-paragraph {
+    p {
+      font-size: 2rem;
+      margin-right: -5rem;
+    }
+  }
+
+  .text {
+    font-size: 1.5rem;
+  }
+
+  .overlay {
+    margin-top: 7rem;
+    margin-left: .4rem;
+  }
+
+  .positioning-brand-statement-paragraph {
+    margin-left: -32.5rem;
+  }
+
+  .skills-positioning-container {
+    width: 100%;
+    margin-left: 4.5rem;
+
+    h3 {
+      font-size: 2.8rem;
+    }
+    h4 {
+      font-size: 2.3rem;
+    }
+  }
+
+  .skills-icons {
+    width: 80px;
+    padding: .5rem;
+  }
+
+  .skills-icons-positioning {
+    width: 115%;
+  }
+
+  // ? Experience page
+
+  .experiences {
+    display: flex;
+    #experiences-media-query-phone {
+      margin-right: -50rem;
+      width: 175%;
+    }
+  }
+
+  .experiences-main-heading {
+    font-size: 20rem;
+    transform: rotate(180deg);
+    writing-mode: vertical-lr;
+    text-align: center;
+    opacity: .1 !important;
+    margin-left: -5.2rem;
+    margin-right: -19.8rem;
+    z-index: 1;
+    color: rgba(0, 0, 0, .5);
+  }
+
+  .experiences-description {
+    h3 {
+      font-size: 2.6rem;
+    }
+    h5 {
+      font-size: 1.9rem;
+    }
+    li {
+      font-size: 2rem;
+      margin-left: -.8rem;
+    }
+    ul li{
+      padding-left: 1em;
+      position: relative; 
+    }
+  
+    ul li:before {
+      content: '-';
+      position: absolute;
+      left: 0;
+  }
+  }
+
+  // ? Projects page
+
+  .projects {
+    width: 210%;
+  }
+
+  .project-details-width {
+    margin-left: -1.5rem;
+  }
+
+  .project-images-resize {
+    width: 680px;
+  }
+
+  .accordion-text-paragraph {
+    font-size: 2rem;
+  }
+
+  // ? Contact page
+
+  .contact-main-heading {
+    margin-left: -5rem;
+    font-size: 12rem;
+    color: rgba(0, 0, 0, .5);
+    opacity: .1;
+  }
+
+}
+
+
+// ! max-width: 375px - iPhone X
+
+@media only screen and (max-width: 375px) {
+
+  // ? Landing page
+
+  
+  // ? About page
+
 
   // ? Experience page
 
@@ -436,4 +578,6 @@
 
   // ? Contact page
 
+
 }
+
