--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -82,7 +82,7 @@ nav a {
 }
 
 nav:hover a h2 {
-  color: rgb(114, 0, 0);;
+  color: rgb(114, 0, 0);
   cursor: url('../images/circleTwo.svg'), auto;
   padding: 2rem;
   margin: -2rem;
