--- a/src/styles/_contacts.scss
+++ b/src/styles/_contacts.scss
@@ -1,5 +1,54 @@
 /* ! Contacts */
 .contacts {
-  min-height: 75vh;
+  margin-top: 8rem;
+  min-height: 100vh;
   animation: open 4s ease-in-out;
+}
+
+.outside-contact-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 8rem;
+}
+
+.contact-container {
+  display: flex;
+  width: 35%;
+  margin-top: 7rem;
+}
+
+.contact-header {
+  h2 {
+    font-family: 'DM Serif Display';
+    font-size: 4rem;
+    text-align: center;
+    margin-bottom: 3rem;
+  }
+}
+
+.positioning-contact-details {
+  display: flex;
+  align-items: center;
+  margin-bottom: .5rem;
+  .contact-icon {
+    width: 50px;
+    height: 50px;
+    margin-right: 1rem;
+  }
+  a {
+    text-decoration: none;
+    color: black;
+  }
+  a:hover {
+    // color:rgb(114, 0, 0);
+    cursor: url('../images/circleTwo.svg'), auto;
+    padding: 2rem 0;
+    margin: -2rem 0;
+  }
+  p {
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
 }
