--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -101,6 +101,10 @@
 
   // ? Contact page
 
+  .contact-header {
+    margin-left: -9rem;
+  }
+
 }
 
 // ! max-width: 800px - iPad
@@ -157,6 +161,16 @@
   }
 
   // ? Contact page
+
+  .contact-header {
+    margin-left: -6rem;
+  }
+
+
+  // ? Footer
+  .footer {
+    width: 125%;
+  }
 
 }
 
@@ -376,12 +390,23 @@
   // ? Contact page
 
   .contacts {
-    margin-top: 10rem;
+    margin: 10rem 0;
   }
 
   .contact-main-heading {
     font-size: 6rem;
-    margin-left: 17rem;
+    margin-left: 8rem;
+  }
+
+  .positioning-contact-details {
+    p {
+      font-size: 1.7rem;
+    }
+  }
+
+  // ? Footer
+  .footer {
+    width: 150%;
   }
 
 }
@@ -489,7 +514,7 @@
 
   .experiences {
     display: flex;
-    #experiences-media-query-phone {
+    .experiences-media-query-phone {
       margin-right: -50rem;
       width: 175%;
     }
@@ -550,11 +575,31 @@
 
   // ? Contact page
 
+  .contacts {
+    margin-bottom: 15rem;
+  }
+
   .contact-main-heading {
     margin-left: -5rem;
     font-size: 12rem;
     color: rgba(0, 0, 0, .5);
     opacity: .1;
+  }
+
+  .positioning-contact-details {
+    p {
+      font-size: 2rem;
+    }
+    margin-left: -4rem;
+  }
+
+  // ? Footer
+  .footer {
+    width: 200%;
+    margin-left: -1rem;
+    p {
+      font-size: 1.5rem;
+    }
   }
 
 }
@@ -566,17 +611,75 @@
 
   // ? Landing page
 
-  
+  .homepage-container {
+    width: 160%;
+  }
+
+  .top-navbar a h2, .bottom-navbar a h2 {
+    font-size: 4.5rem;
+  }
+
+  .my-introduction-heading {
+    margin-top: 35rem;
+    h1 {
+      font-size: 11rem;
+    }
+    h2 {
+      font-size: 6.5rem;
+    }
+  }
+
   // ? About page
 
+  .about {
+    margin-top: 20rem;
+  }
+
+  .positioning-about-main-heading {
+    font-size: 3rem;
+    width: 700px;
+  }
+
+  .about-paragraph {
+    .my-photo-positioning {
+      margin-top: 28rem;
+      margin-left: -18rem;
+    }
+    p {
+      font-size: 2.2rem;
+      margin-right: 1.5rem;
+      margin-left: -45rem;
+    }
+  }
+
+  .skills-positioning-container {
+    width: 90%;
+    margin-left: 1rem;
+  }
 
   // ? Experience page
 
+  .experiences .experiences-media-query-phone {
+    margin-right: -50rem;
+    width: 200%;
+}
+
+  .dashed {
+    .accordion-text-paragraph {
+      margin-left: -2.5rem;
+    }
+  }
 
   // ? Projects page
 
+  .projects {
+    width: 240%;
+  }
 
-  // ? Contact page
+  // ? Footer
+  .footer {
+    margin-left: 1rem;
+  }
 
 
 }
