--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,5 +1,5 @@
 * {
-  background: antiquewhite;
+  // background: antiquewhite;
   ul {
     margin: 0;
   }
@@ -15,6 +15,112 @@
     text-indent: -5px;
   }
 }
+
+// home scroll
+
+.scroll-home {
+  position: fixed;
+  bottom: 800px;
+  right: .5rem;
+  width: 60px;
+  height: 60px;
+  background: antiquewhite url('../images/SVGIcons/home-icon.svg');
+  border-radius: 50%;
+  background-size: 30px;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  z-index: 99999;
+  visibility: hidden;
+  opacity: 0;
+  transition: .5s;
+}
+
+.scroll-home.active {
+  bottom: 40px;
+  visibility: visible;
+  opacity: 1;
+}
+
+// toggle effect
+
+:root {
+  --clr-light: antiquewhite;
+  --clr-dark: black;
+  --clr-primary: antiquewhite;
+
+  --foreground: var(--clr-dark);
+  --background: var(--clr-light);
+
+}
+
+.darkmode {
+  --clr-light: antiquewhite;
+  --clr-dark: black;
+  --clr-primary: antiquewhite;
+
+  --foreground: var(--clr-light);
+  --background: var(--clr-dark);
+
+  nav a {
+    color: antiquewhite;
+    opacity: .6;
+  }
+  nav:hover a {
+    opacity: 1;
+  }
+  .scrolls {
+    color: antiquewhite;
+    opacity: 1;
+  
+    .scroll-indicator-line {
+      background-color: antiquewhite;
+    }
+  }
+  .text {
+    color: antiquewhite;
+  }
+  .skills-icons {
+    background: antiquewhite;
+    padding: .5rem;
+  }
+  .skills-positioning-container h3 {
+    border-bottom: 1px solid rgba(114, 0, 0, 1);
+  }
+}
+
+
+body {
+  background: var(--background);
+  color: var(--foreground);
+}
+
+.intro {
+  background: linear-gradient(120deg, var(--clr-primary));
+}
+
+.dark-mode-toggle {
+  position: absolute;
+  z-index: 100;
+  color: var(--foreground);
+  border: 2px solid currentColor;
+  padding: 4px;
+  background: transparent;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 30px;
+  height: 30px;
+}
+
+.toggle-button-position {
+  display: flex;
+  justify-content: center;
+  button {
+    margin-top: 2rem;
+  }
+}
+
+// scrolling effect
 
 .scrolls {
   position: fixed;
@@ -88,8 +194,7 @@ nav:hover a h2 {
   margin: -2rem;
 }
 
-.cursor-outside-container {
-  min-height: 100vh;
+* {
   cursor: url('../images/circle.svg'), auto;
 }
 
