--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,10 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap");
-* {
-  background: antiquewhite;
-}
-
 * ul {
   margin: 0;
 }
@@ -22,6 +18,113 @@
 * ul.dashed > li:before {
   content: "-";
   text-indent: -5px;
+}
+
+.scroll-home {
+  position: fixed;
+  bottom: 800px;
+  right: .5rem;
+  width: 60px;
+  height: 60px;
+  background: antiquewhite url("../images/SVGIcons/home-icon.svg");
+  border-radius: 50%;
+  background-size: 30px;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  z-index: 99999;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.scroll-home.active {
+  bottom: 40px;
+  visibility: visible;
+  opacity: 1;
+}
+
+:root {
+  --clr-light: antiquewhite;
+  --clr-dark: black;
+  --clr-primary: antiquewhite;
+  --foreground: var(--clr-dark);
+  --background: var(--clr-light);
+}
+
+.darkmode {
+  --clr-light: antiquewhite;
+  --clr-dark: black;
+  --clr-primary: antiquewhite;
+  --foreground: var(--clr-light);
+  --background: var(--clr-dark);
+}
+
+.darkmode nav a {
+  color: antiquewhite;
+  opacity: .6;
+}
+
+.darkmode nav:hover a {
+  opacity: 1;
+}
+
+.darkmode .scrolls {
+  color: antiquewhite;
+  opacity: 1;
+}
+
+.darkmode .scrolls .scroll-indicator-line {
+  background-color: antiquewhite;
+}
+
+.darkmode .text {
+  color: antiquewhite;
+}
+
+.darkmode .skills-icons {
+  background: antiquewhite;
+  padding: .5rem;
+}
+
+.darkmode .skills-positioning-container h3 {
+  border-bottom: 1px solid #720000;
+}
+
+body {
+  background: var(--background);
+  color: var(--foreground);
+}
+
+.intro {
+  background: linear-gradient(120deg, var(--clr-primary));
+}
+
+.dark-mode-toggle {
+  position: absolute;
+  z-index: 100;
+  color: var(--foreground);
+  border: 2px solid currentColor;
+  padding: 4px;
+  background: transparent;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 30px;
+  height: 30px;
+}
+
+.toggle-button-position {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.toggle-button-position button {
+  margin-top: 2rem;
 }
 
 .scrolls {
@@ -104,8 +207,7 @@ nav:hover a h2 {
   margin: -2rem;
 }
 
-.cursor-outside-container {
-  min-height: 100vh;
+* {
   cursor: url("../images/circle.svg"), auto;
 }
 
@@ -263,6 +365,7 @@ nav:hover a h2 {
   -webkit-transition: 2s;
   transition: 2s;
   display: block;
+  padding: .5rem;
 }
 
 .skills-icons-positioning {
