--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -23,7 +23,7 @@
 .scroll-home {
   position: fixed;
   bottom: 800px;
-  right: .5rem;
+  right: 1.05rem;
   width: 60px;
   height: 60px;
   background: antiquewhite url("../images/SVGIcons/home-icon.svg");
@@ -92,13 +92,13 @@
   border-bottom: 1px solid #720000;
 }
 
+.darkmode details summary {
+  border-color: antiquewhite;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
-}
-
-.intro {
-  background: linear-gradient(120deg, var(--clr-primary));
 }
 
 .dark-mode-toggle {
