--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -16,6 +16,21 @@
   }
 }
 
+// toggle burger
+
+.toggle-burger {
+  position: fixed;
+  top: 30px;
+  right: 30px;
+  width: 50px;
+  height: 50px;
+  background: #000 url('../images/menu.png');
+  background-size: 30px;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+
 // home scroll
 
 .scroll-home {
