--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -20,6 +20,18 @@
   text-indent: -5px;
 }
 
+.toggle-burger {
+  position: fixed;
+  top: 30px;
+  right: 30px;
+  width: 50px;
+  height: 50px;
+  background: #000 url("../images/menu.png");
+  background-size: 30px;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .scroll-home {
   position: fixed;
   bottom: 800px;
