Sorting some cursor issues

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -28,6 +28,7 @@
   background-size: 30px;
   background-position: center;
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 
@@ -208,8 +209,8 @@ nav:hover a h2 {
   margin: -2rem;
 }
 
-* {
-  cursor: url('../images/circle.svg'), auto;
+.cursor-normal {
+  cursor: url('../images/circle.svg') 12 10, auto;
 }
 
 .top-navbar {
