--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -18,19 +18,25 @@
 
 // toggle burger
 
-.toggle-burger {
-  position: fixed;
-  top: 30px;
-  right: 30px;
-  width: 50px;
-  height: 50px;
-  background: #000 url('../images/menu.png');
-  background-size: 30px;
-  background-position: center;
-  background-repeat: no-repeat;
-  cursor: pointer;
-}
+// .toggle-burger {
+//   position: fixed;
+//   top: 30px;
+//   right: 30px;
+//   width: 50px;
+//   height: 50px;
+//   background: #000 url('../images/menu.png');
+//   background-size: 30px;
+//   background-position: center;
+//   background-repeat: no-repeat;
+//   cursor: pointer;
+// }
 
+// .toggle-burger.active {
+//   background: #000 url('../images/close.png');
+//   background-size: 25px;
+//   background-position: center;
+//   background-repeat: no-repeat;
+// }
 
 // home scroll
 
@@ -46,7 +52,7 @@
   background-position: center;
   background-repeat: no-repeat;
   cursor: pointer;
-  z-index: 99999;
+  z-index: 99997;
   visibility: hidden;
   opacity: 0;
   transition: .5s;
@@ -82,7 +88,7 @@
     color: antiquewhite;
     opacity: .6;
   }
-  nav:hover a {
+  nav:hover a h2 {
     opacity: 1;
   }
   .scrolls {
@@ -203,11 +209,15 @@ nav a {
 }
 
 nav:hover a h2 {
-  color: rgb(114, 0, 0);
   cursor: url('../images/circleTwo.svg'), auto;
   padding: 2rem;
   margin: -2rem;
 }
+
+nav a h2:hover {
+  color: rgb(114, 0, 0);
+}
+
 
 .cursor-normal {
   cursor: url('../images/circle.svg') 12 10, auto;
