--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -1,12 +1,161 @@
 // ! max-width: 1024px - iPad Pro
 @media only screen and (max-width: 1024px) {
 
+  // -- Responsive navbar -- 
+
+  .putting-margin-to-home-page {
+    padding: 0;
+  }
+
+  .nav-icon {
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    margin-top: 2rem;
+    margin-bottom: 50px;
+    right: 32px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+    z-index: 999999;
+  }
+
+  .nav-icon span {
+    display: block;
+    position: absolute;
+    height: 9px;
+    width: 100%;
+    background: #d3531a;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+  }
+
+  .nav-icon span:nth-child(1) {
+    top: 0px;
+  }
+
+  .nav-icon span:nth-child(2), .nav-icon span:nth-child(3) {
+    top: 18px;
+  }
+
+  .nav-icon span:nth-child(4) {
+    top: 36px;
+  }
+
+  .nav-icon.active span:nth-child(1) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
+  }
+
+  .nav-icon.active span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  .nav-icon.active span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+
+  .nav-icon.active span:nth-child(4) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
+  }
+
+  .side-navbar {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: calc(100% - 500px);
+    // padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: black;
+    min-height: 100vh;
+    z-index: 99998;
+    transition: 1s ease-in-out;
+    nav a {
+      opacity: .8;
+      transition: 1s;
+    }
+    .top-navbar {
+      justify-content: unset;
+      align-items: unset;
+      flex-direction: column;
+      h2 {
+        color: antiquewhite;
+        font-size: 4rem;
+      }
+    }
+    .bottom-navbar {
+      bottom: unset;
+      justify-content: unset;
+      align-items: unset;
+      flex-direction: column;
+      h2 {
+        color: antiquewhite;
+        font-size: 4rem;
+      }
+      .navbar-contacts-directions {
+        writing-mode: horizontal-tb;
+      }
+    }
+  }
+
+  .side-navbar.active {
+    right: 0;
+  }
+
+  // I have to use this to prevent when you click on a thing it directs you to the right page.
+  nav:hover a h2 {
+    pointer-events: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .darkmode {
+    .side-navbar {
+      background: antiquewhite;
+    }
+    .top-navbar, .bottom-navbar {
+      h2 {
+        color: black;
+      }
+    }
+  }
+
+
+// -- End navbar --
+
+
   .disabled {
     pointer-events: none;
-    margin-left: 2.9rem;
-    h1 {
-      opacity: .2;
-    }
+    // margin-left: 2.9rem;
+    // h1 {
+    //   opacity: .2;
+    // }
   }
 
   .projects-media-query-hover {
@@ -233,8 +382,7 @@
 
   nav:hover a h2 {
     pointer-events: none;
-    margin-right: -5rem;
-    color: black;
+    margin-right: -10rem;
   }
 
   // ? About page
