--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -136,3 +136,71 @@ details p {
   font-size: 1.3rem;
   font-family: 'Raleway', sans-serif;
 }
+
+.positioning-projects-buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+  ul {
+    display: flex;
+    li {
+      list-style: none;
+      a {
+        text-decoration: none;
+        color: inherit;
+        font-family: didot;
+      }
+      .cta {
+        position: relative;
+        margin: 0 10px;
+        padding: 17px 22px;
+        transition: all .2s ease;
+        &:before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          display: block;
+          border-radius: 28px;
+          background: rgba(114, 0, 0, .2);        // #FFAB9D
+          width: 56px;
+          height: 56px;
+          transition: all .3 ease;
+        }
+        span {
+          position: relative;
+          font-size: 16px;
+          line-height: 18px;
+          font-weight: 900;
+          letter-spacing: .15em;
+          text-transform: uppercase;
+          vertical-align: middle;
+        }
+        svg {
+          position: relative;
+          top: 0;
+          margin-left: 10px;
+          fill: none;
+          stroke-linecap: round;
+          stroke-linejoin: round;
+          stroke: #111;
+          stroke-width: 2;
+          transform: translateX(-5px);
+          transition: all .3 ease;
+        }
+        &:hover {
+          &:before {
+            width: 100%;
+            // background: rgba(114, 0, 0, .8);
+          }
+          svg {
+            transform: translateX(0)
+          }
+        }
+        &:active {
+          transform: scale(.96);
+        }
+      }
+    }
+  }
+}
